<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="insert_timestamp">Insert timestamp</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <!-- "new" is reserved -->
    <string name="set">Set</string>
    <string name="not_now">Not now</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="delete_amount_of_books">Delete %d notebooks</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
    <string name="export">Export</string>
    <string name="overwrite">Overwrite</string>
...
    <string name="tags">Tags</string>
    <string name="book_mtime">Notebook modification time</string>
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
...
    <string name="new_below">New below</string>

    <string name="confirm_unlinking_from_dropbox_title">Unlink from Dropbox?</string>
    <string name="confirm_unlinking_from_dropbox_message">You will not be able to sync to Dropbox until you link to it again.</string>

    <string name="note_book_not_set">Notebook not set</string>
    <string name="title_can_not_be_empty">Title cannot be empty</string>
    <string name="can_not_be_empty">Cannot be empty</string>
    <string name="invalid_url">Invalid URL</string>

    <string name="no_notebooks">You have no notebooks</string>
    <string name="no_notes">Notebook has no notes</string>
    <string name="create_new_repository_for_syncing">Create new repository for syncing your notebooks</string>
...
    <string name="also_delete_linked_book">Delete linked remote notebook</string>
    <string name="also_delete_linked_books">Delete any linked remote notebooks</string>
    <string name="message_deleting_book_failed">Deleting notebook(s) failed: %s</string>
    <string name="message_book_deleted">Notebook(s) deleted</string>

    <string name="default_priority">Default priority</string>
    <string name="lowest_priority">Lowest priority</string>

    <string name="todo_states">Keywords for active (todo) tasks</string>
    <string name="done_states">Keywords for completed (done) tasks</string>

    <string name="use_created_at_property">Use property for created-at time</string>
    <string name="use_created_at_property_summary">Sync created-at time using a property</string>
...

    <string name="placement_of_shared_text">Placement of shared plain text</string>
    <string name="in_note_heading">In note heading</string>
    <string name="in_note_content">In note content</string>
    <string name="create_org_links_from_shared_links">Create org links from shared links</string>
    <string name="book_names_cannot_contain">Book names cannot contain \'../\'</string>
    <string name="is_active_label">Active</string>

    <string name="query_filter_search">Refine search</string>

    <string name="search_filter_exclude_done">Exclude done items</string>
    <string name="search_filter_show_as_agenda">Show as agenda</string>
    <string name="search_filter_default_sort_order">Default</string>
...
