...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewFlipper
            android:id="@+id/fragment_book_view_flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar style="@style/LoadingProgressBar" />

            <androidx.recyclerview.widget.RecyclerView
...
    <!-- Bottom toolbar -->
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_toolbar"
        style="@style/BottomToolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/Fab.Add" />

    <!-- Capture template FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/capture_fab"
        style="@style/Fab.Capture"
...
